# OutreachIQ

./: .env.example  .gitignore  ARCHITECTURE.md  LAUNCH_GUIDE.md  LAYOUT.md  README.md  docker-compose.yml
backend/: .env.example  Cargo.toml  Dockerfile  Dockerfile.worker
backend/migrations/: 20240101000000_initial.sql  20240102000000_multi_tenancy_security.sql  20240103000000_signals_schema.sql  20240104000000_founder_dashboard.sql  20240105000000_fix_leads_unique_constraint.sql
backend/src/: config.rs  lib.rs  main.rs
backend/src/api/: analytics.rs  auth.rs  billing.rs  campaigns.rs  compliance.rs  email_accounts.rs  founder_dashboard.rs  leads.rs  mod.rs  signals.rs
backend/src/db/: mod.rs
backend/src/middleware/: auth.rs
backend/src/models/: campaign.rs  company.rs  compliance.rs  lead.rs  mod.rs  signal.rs  user.rs  workspace.rs
backend/src/services/: auto_pause.rs  campaign_scheduler.rs  deliverability.rs  email_sender.rs  email_verifier.rs  encryption.rs  github_connector.rs  job_queue.rs  lead_generator.rs  mod.rs  reply_classifier.rs  signal_tracker.rs  warmup_service.rs  wellfound_connector.rs
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: layout.tsx  page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/dashboard/admin/: page.tsx
frontend/app/dashboard/analytics/: page.tsx
frontend/app/login/: page.tsx
frontend/app/pricing/: page.tsx
frontend/app/register/: page.tsx
frontend/app/signals/: page.tsx
frontend/lib/: api.ts  auth-context.tsx
(+6 files in other folders)
